// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BankDetails Component render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "marginTop": 5,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                  }
                }
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowLeft"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  SEPA Bank Transfer bank transfer
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                style={
                  {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 32,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={24}
                    name="Close"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </TouchableOpacity>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={2}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={1}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          refreshControl={
                            <RefreshControlMock
                              colors={
                                [
                                  "#4459ff",
                                ]
                              }
                              onRefresh={[Function]}
                              refreshing={true}
                              tintColor="#121314"
                            />
                          }
                        >
                          <RCTRefreshControl />
                          <View>
                            <View
                              style={
                                [
                                  {
                                    "flex": 1,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "padding": 15,
                                    },
                                    undefined,
                                    {
                                      "flex": 1,
                                      "paddingHorizontal": 16,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "gap": 8,
                                      "marginBottom": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    To complete your order
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Initiate a transfer from your preferred bank using the information below.
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Once you’re finished, come back and click “Bank transfer sent” to confirm.
                                  </Text>
                                </View>
                                <View
                                  style={
                                    {
                                      "backgroundColor": "#3c4d9d1a",
                                      "borderRadius": 8,
                                      "gap": 16,
                                      "padding": 16,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Transfer amount
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        $100.00
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Account holder name
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        John Doe
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Account number
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        1234567890
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <TouchableOpacity
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "gap": 8,
                                        "justifyContent": "center",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#4459ff",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Show bank information
                                    </Text>
                                    <SvgMock
                                      color="#4459ff"
                                      fill="currentColor"
                                      height={16}
                                      name="ArrowDown"
                                      style={
                                        {
                                          "height": 16,
                                          "width": 16,
                                        }
                                      }
                                      width={16}
                                    />
                                  </TouchableOpacity>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View>
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "gap": 16,
                                }
                              }
                            >
                              <View
                                accessibilityRole="none"
                                accessible={true}
                                style={
                                  {
                                    "backgroundColor": "#3c4d9d1a",
                                    "borderRadius": 8,
                                    "marginVertical": 8,
                                    "padding": 16,
                                    "paddingVertical": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": -1,
                                      }
                                    }
                                    testID="listitemcolumn"
                                  >
                                    <SvgMock
                                      color="#686e7d"
                                      fill="currentColor"
                                      height={24}
                                      name="SecurityKey"
                                      style={
                                        {
                                          "height": 24,
                                          "width": 24,
                                        }
                                      }
                                      width={24}
                                    />
                                  </View>
                                  <View
                                    accessible={false}
                                    style={
                                      {
                                        "width": 8,
                                      }
                                    }
                                    testID="listitem-gap"
                                  />
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                    testID="listitemcolumn"
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#686e7d",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 12,
                                          "letterSpacing": 0.25,
                                          "lineHeight": 20,
                                        }
                                      }
                                    >
                                      You should see 'John Doe' as the account holder. This helps your bank process the transfer.
                                    </Text>
                                  </View>
                                </View>
                              </View>
                              <View
                                style={
                                  {
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={1}
                                  onPress={[Function]}
                                  onPressIn={[Function]}
                                  onPressOut={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "flex-start",
                                      "backgroundColor": "#3c4d9d1a",
                                      "borderColor": "transparent",
                                      "borderRadius": 12,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Cancel order
                                  </Text>
                                </TouchableOpacity>
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={1}
                                  onPress={[Function]}
                                  onPressIn={[Function]}
                                  onPressOut={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "flex-start",
                                      "backgroundColor": "#121314",
                                      "borderRadius": 12,
                                      "flex": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="main-action-button"
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#ffffff",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Transfer sent
                                  </Text>
                                </TouchableOpacity>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`BankDetails Component render matches snapshot with bank info shown 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "marginTop": 5,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                  }
                }
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowLeft"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  SEPA Bank Transfer bank transfer
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                style={
                  {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 32,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={24}
                    name="Close"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </TouchableOpacity>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={4}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={3}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          refreshControl={
                            <RefreshControlMock
                              colors={
                                [
                                  "#4459ff",
                                ]
                              }
                              onRefresh={[Function]}
                              refreshing={true}
                              tintColor="#121314"
                            />
                          }
                        >
                          <RCTRefreshControl />
                          <View>
                            <View
                              style={
                                [
                                  {
                                    "flex": 1,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "padding": 15,
                                    },
                                    undefined,
                                    {
                                      "flex": 1,
                                      "paddingHorizontal": 16,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "gap": 8,
                                      "marginBottom": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    To complete your order
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Initiate a transfer from your preferred bank using the information below.
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Once you’re finished, come back and click “Bank transfer sent” to confirm.
                                  </Text>
                                </View>
                                <View
                                  style={
                                    {
                                      "backgroundColor": "#3c4d9d1a",
                                      "borderRadius": 8,
                                      "gap": 16,
                                      "padding": 16,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Transfer amount
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        $100.00
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Account holder name
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        John Doe
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Account number
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        1234567890
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Bank name
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        Test Bank
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "flexDirection": "row",
                                        "justifyContent": "space-between",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Bank address
                                    </Text>
                                    <View
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "flexDirection": "row",
                                          "gap": 8,
                                          "justifyContent": "flex-end",
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#686e7d",
                                            "flex": 1,
                                            "flexWrap": "wrap",
                                            "fontFamily": "Geist Regular",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                            "textAlign": "right",
                                          }
                                        }
                                      >
                                        123 Bank Street
                                      </Text>
                                      <TouchableOpacity
                                        onPress={[Function]}
                                        testID="copy-button"
                                      >
                                        <SvgMock
                                          color="#686e7d"
                                          fill="currentColor"
                                          height={16}
                                          name="Copy"
                                          style={
                                            {
                                              "height": 16,
                                              "width": 16,
                                            }
                                          }
                                          width={16}
                                        />
                                      </TouchableOpacity>
                                    </View>
                                  </View>
                                  <TouchableOpacity
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "gap": 8,
                                        "justifyContent": "center",
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#4459ff",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 16,
                                          "letterSpacing": 0,
                                          "lineHeight": 24,
                                        }
                                      }
                                    >
                                      Hide bank information
                                    </Text>
                                    <SvgMock
                                      color="#4459ff"
                                      fill="currentColor"
                                      height={16}
                                      name="ArrowUp"
                                      style={
                                        {
                                          "height": 16,
                                          "width": 16,
                                        }
                                      }
                                      width={16}
                                    />
                                  </TouchableOpacity>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View>
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "gap": 16,
                                }
                              }
                            >
                              <View
                                accessibilityRole="none"
                                accessible={true}
                                style={
                                  {
                                    "backgroundColor": "#3c4d9d1a",
                                    "borderRadius": 8,
                                    "marginVertical": 8,
                                    "padding": 16,
                                    "paddingVertical": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": -1,
                                      }
                                    }
                                    testID="listitemcolumn"
                                  >
                                    <SvgMock
                                      color="#686e7d"
                                      fill="currentColor"
                                      height={24}
                                      name="SecurityKey"
                                      style={
                                        {
                                          "height": 24,
                                          "width": 24,
                                        }
                                      }
                                      width={24}
                                    />
                                  </View>
                                  <View
                                    accessible={false}
                                    style={
                                      {
                                        "width": 8,
                                      }
                                    }
                                    testID="listitem-gap"
                                  />
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                    testID="listitemcolumn"
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#686e7d",
                                          "fontFamily": "Geist Regular",
                                          "fontSize": 12,
                                          "letterSpacing": 0.25,
                                          "lineHeight": 20,
                                        }
                                      }
                                    >
                                      You should see 'John Doe' as the account holder. This helps your bank process the transfer.
                                    </Text>
                                  </View>
                                </View>
                              </View>
                              <View
                                style={
                                  {
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={1}
                                  onPress={[Function]}
                                  onPressIn={[Function]}
                                  onPressOut={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "flex-start",
                                      "backgroundColor": "#3c4d9d1a",
                                      "borderColor": "transparent",
                                      "borderRadius": 12,
                                      "borderWidth": 1,
                                      "flex": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Cancel order
                                  </Text>
                                </TouchableOpacity>
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={1}
                                  onPress={[Function]}
                                  onPressIn={[Function]}
                                  onPressOut={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "flex-start",
                                      "backgroundColor": "#121314",
                                      "borderRadius": 12,
                                      "flex": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="main-action-button"
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#ffffff",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Transfer sent
                                  </Text>
                                </TouchableOpacity>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
